--- a/MyHomepage/MyHomepage.html
+++ b/MyHomepage/MyHomepage.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link href="mystyle.css" rel="stylesheet" type="text/css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script src="jquery.cycle2.min.js"></script>
   <title>My Homepage </title>
 
   <style>
@@ -11,11 +13,23 @@
   *{
     color: #404040;
   }
-  </style>
+  img{
+    width: 100%;
+    height: 500px;
+    position: absolute;
+    float: left;
+  }
+    </style>
 </head>
 
 <body>
-  <div style="background: url(background.jpg); background-size: cover;">
+  <div>
+    <div class="cycle-slideshow">
+      <img src="https://malsup.github.io/images/p1.jpg">
+      <img src="https://malsup.github.io/images/p2.jpg">
+      <img src="https://malsup.github.io/images/p3.jpg">
+      <img src="https://malsup.github.io/images/p4.jpg">
+  </div>
     <br>
     <p style="font-size:50px; color:white">SeongMun Hwang</p>
     <h3 style="color: white" class="target">Welcome to My Homepage!</h3><br>
