--- a/MyHomepage/MyHomepage.html
+++ b/MyHomepage/MyHomepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE>
 <html>
+
 <head>
   <link href="mystyle.css" rel="stylesheet" type="text/css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -7,32 +8,43 @@
   <title>My Homepage </title>
 
   <style>
-  html{
-    font-family: 'helvetica neue', helvetica, arial, sans-serif;
-  }
-  *{
-    color: #404040;
-  }
-  img{
-    width: 100%;
-    height: 500px;
-    position: absolute;
-    float: left;
-  }
-    </style>
+    html {
+      font-family: 'helvetica neue', helvetica, arial, sans-serif;
+    }
+
+    * {
+      color: #404040;
+    }
+
+    img {
+      width: 100%;
+      height: 300px;
+    }
+
+    .cycle-slideshow {
+      z-index: 1;
+    }
+
+    .top {
+      position: absolute;
+      z-index: 2;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <div>
-    <div class="cycle-slideshow">
-      <img src="https://malsup.github.io/images/p1.jpg">
-      <img src="https://malsup.github.io/images/p2.jpg">
-      <img src="https://malsup.github.io/images/p3.jpg">
-      <img src="https://malsup.github.io/images/p4.jpg">
-  </div>
-    <br>
+  <div class="top">
     <p style="font-size:50px; color:white">SeongMun Hwang</p>
     <h3 style="color: white" class="target">Welcome to My Homepage!</h3><br>
+  </div>
+  <div class="cycle-slideshow">
+    <img src="background.jpg">
+    <img src="https://malsup.github.io/images/p2.jpg">
+    <img src="https://malsup.github.io/images/p3.jpg">
+    <img src="https://malsup.github.io/images/p4.jpg">
+  </div>
+  <div>
     <table class="basic">
       <thead>
         <tr>
@@ -47,19 +59,20 @@
 
   <div id "middle" style="background-color: #BDD3F3"><br>
     <p>My favorite guiter song</p>
-    <audio src="Twilight.mp3"controls></audio><br>
+    <audio src="Twilight.mp3" controls></audio><br>
     <p>One personwho is studying hard, dreaming of <strong>a computer programmer</strong>.</p>
 
-  <h2 id="subject">Subject you are currently studying</h2>
-  <ul>
-    <li>C language</li>
-    <li>JAVA language</li>
-    <li>Web programming <a href="https://atom.io/"target="_blank">atom</a></li>
-  </ul>
-  <br><br>
-</div>
+    <h2 id="subject">Subject you are currently studying</h2>
+    <ul>
+      <li>C language</li>
+      <li>JAVA language</li>
+      <li>Web programming <a href="https://atom.io/" target="_blank">atom</a></li>
+    </ul>
+    <br><br>
+  </div>
 
 
   </div>
 </body>
+
 </html>
