--- a/MyHomepage/MyHomepage.html
+++ b/MyHomepage/MyHomepage.html
@@ -38,7 +38,8 @@
     <p style="font-size:50px; color:white">SeongMun Hwang</p>
     <h3 style="color: white" class="target">Welcome to My Homepage!</h3><br>
   </div>
-  <div class="cycle-slideshow">
+  <div class="cycle-slideshow"     
+   data-cycle-speed="200">
     <img src="background.jpg">
     <img src="https://malsup.github.io/images/p2.jpg">
     <img src="https://malsup.github.io/images/p3.jpg">
