homework for lecture 12

--- a/MyHomepage/MyHomepage.html
+++ b/MyHomepage/MyHomepage.html
@@ -5,6 +5,13 @@
   <link href="mystyle.css" rel="stylesheet" type="text/css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="jquery.cycle2.min.js"></script>
+  <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <title>My Homepage </title>
 
   <style>
@@ -30,6 +37,10 @@
       z-index: 2;
       width: 100%;
     }
+    .col-sm-12 button{
+            display: inline;
+            float: right;
+        }
   </style>
 </head>
 
@@ -74,6 +85,34 @@
 
 
   </div>
+  <div class="row" style="background-color: rgb(184, 184, 184);">
+    <div class="col-sm-5">
+        <br><br><br><br>
+        <p>Contact us and well get back to you within 24 hours</p>
+        <span class="glyphicon glyphicon-map-marker icon">Cheongju, South Koread</span><br><br>
+        <span class="glyphicon glyphicon-mobile-phone icon">+00 1515151515</span><br><br>
+        <span class="glyphicon glyphicon-envelope icon">myemail@something.com</span><br><br>
+
+    </div>
+    <div class="col-sm-7">
+        <h1>contact</h1>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" placeholder="Name">
+        </div>
+        <div class="col-sm-6">
+            <input type="email" class="form-control" placeholder="Email">
+        </div>
+        <div class="col-sm-12"> 
+            <br>
+            <input type="text" style="height: 200px;" class="form-control" placeholder="Commment">
+            <br>
+        </div> 
+        <div class="col-sm-12">
+            <button class="btn btn-default">send</button><br><br><br>
+        </div>
+    </div>
+    
+</div>    
 </body>
 
 </html>
